--- a/r48.yaml
+++ b/r48.yaml
@@ -100,9 +100,7 @@ resolution: |
     
     This does not imply any formal relationship or agreement with the non-Associated Project; PgUS will not take donations earmarked for the assistance of, or assets related to, a non-Associated Project.
     
+motion: email
 vote_record: |
-    RT: Yay
-    KP: Yay
-    MB: Yay
-    MW: Yay
-    JM: Yay
+    - name: JD
+      proposer: yes
