--- a/r54.yaml
+++ b/r54.yaml
@@ -11,10 +11,19 @@ resolution: |
     THE UNITED STATES POSTGRESQL ASSOCIATION RESOLVES THAT
     
      1. It shall appoint Mark Wong as interim President replacing Robert Treat.
+motion: voice
 vote_record: |
-    JD: Yay
-    KP: Yay
-    RT: Yay (proxy)
-    JSK: Yay
-    MB: Yay (proxy)
-    MW: Yay
+    - name: JD
+      vote: 1
+    - name: KP
+      vote: 1
+    - name: RT
+      proxy: KP
+      vote: 1
+    - name: JSK
+      vote: 1
+    - name: MB
+      proxy: KP
+      vote: 1
+    - name: MW
+      vote: 1
