--- a/r63.yaml
+++ b/r63.yaml
@@ -22,3 +22,12 @@ resolution: |
     	A. The original Associated Project Liaison
     	B. The steering committee per the published governance document of the project
     	C. A new liaison with documentation of their new position within the project
+motion: email
+vote_record: |
+    - name: JD
+    - name: MW
+    - name: KP
+    - name: MAB
+    - name: RT
+    - name: JSK
+    - name: JM
