--- a/r65.yaml
+++ b/r65.yaml
@@ -37,11 +37,22 @@ resolution: |
     	election.  The Board may, by resolution, establish procedures governing
     	nomination and election of officers that are consistent with these
     	Bylaws.
+motion: voice
 vote_record: |
-    MW: Yes (motion)
-    JD: Yes (Seconded)
-    RT: Abstain
-    JSK: Yes
-    JM: Yes (via proxy JSK)
-    KP: Yes
-    MB: Yes
+    - name: MW
+      proposer: yes
+      vote: 1
+    - name: JD
+      seconded: yes
+      vote: 1
+    - name: RT
+      vote: 0
+    - name: JSK
+      vote: 1
+    - name: JM
+      proxy: JSK
+      vote: 1
+    - name: KP
+      vote: 1
+    - name: MB
+      vote: 1
