--- a/r70.yaml
+++ b/r70.yaml
@@ -7,5 +7,7 @@ resolution: |
     
     	The corporation wishes to grant membership privileges and all benefits
     	thereof to any current PostgreSQL Core team member.
+motion: voice
 vote_record: |
-    MW: (motioned)
+    - name: MW
+      proposer: 1
