--- a/r1.yaml
+++ b/r1.yaml
@@ -12,8 +12,15 @@ resolution: |
     purpose of the travel is within the guidelines of our mission/bylaws.
     
     The conference series is an autonomous project being supported by PGUS.
+motion: email
 vote_record: |
-    JD - Proposer (so, "Yes") (email)
-    SD - Yes (email, April 20)
-    MB - Yes (email, April 19)
-    
+    - name: JD
+      proposer: yes
+      vote: 1
+      date: 2008-04-19
+    - name: SD
+      vote: 1
+      date: 2008-04-20
+    - name: MB
+      vote: 1
+      date: 2008-04-19
