--- a/r2.yaml
+++ b/r2.yaml
@@ -8,7 +8,11 @@ resolution: |
     "As part of your membership you agree to adhere to the Ubuntu Code of
     Conduct when promoting, educating or otherwise participating in the
     Open Source community on behalf of PostgreSQL"
+motion: email
 vote_record: |
-    JD - Yes (Proposed via email on April 26)
-    SD - No answer
-    MB - No answer
+    - name: JD
+      proposer: yes
+      vote: 1
+      date: 2008-04-26
+    - name: SD
+    - name: MB
