--- a/r21.yaml
+++ b/r21.yaml
@@ -1,4 +1,4 @@
-title: "Resolution: NYCPUG Associated User Group"
+title: NYCPUG Associated User Group
 resolution_date: 2012-12-19T00:00:00
 action_date: 2012-12-20T00:00:00
 action: Approved
@@ -29,12 +29,27 @@ resolution: |
     NYCPUG.
     
     6. The authorized contact of NYCPUG shall be Jonathan S. Katz
+motion: email
 vote_record: |
-    MAB: +1 (via email 2012-12-19)
-    KK: +1 "works for me" (via email 2012-12-19)
-    MW: +1 (via email 2012-12-19)
-    JD: +1 (via email 2012-12-19)
-    RT: +1 (via email 2012-12-20)
-    GSM: +1 (via email 2012-12-20)
-    BM: +1 (via email 2012-12-20)
-    
+    - name: MAB
+      vote: 1
+      date: 2012-12-19
+    - name: KK
+      vote: 1
+      date: 2012-12-19
+    - name: MW
+      vote: 1
+      date: 2012-12-19
+    - name: JD
+      proposer: yes
+      vote: 1
+      date: 2012-12-19
+    - name: RT
+      vote: 1
+      date: 2012-12-20
+    - name: GSM
+      vote: 1
+      date: 2012-12-20
+    - name: BM
+      vote: 1
+      date: 2012-12-20
