--- a/r22.yaml
+++ b/r22.yaml
@@ -29,11 +29,27 @@ resolution: |
     PhillyPUG.
     
     6. The authorized contact of PhillyPUG shall be Jim Mlodgenski
+motion: email
 vote_record: |
-    MAB: +1 (via email 2012-12-20)
-    BM: +1 (via email 2012-12-20)
-    MW: +1 (via email 2012-12-20)
-    JD: +1 (via email 2012-12-20)
-    GSM: +1 (via email 2012-12-20)
-    RT: +1 (via email forwarded by JD 2012-12-21)
-    KK: +1 (via email forwarded by JD 2012-12-21)
+    - name: MAB
+      vote: 1
+      date: 2012-12-20
+    - name: BM
+      vote: 1
+      date: 2012-12-20
+    - name: MW
+      vote: 1
+      date: 2012-12-20
+    - name: JD
+      proposer: yes
+      vote: 1
+      date: 2012-12-20
+    - name: GSM
+      vote: 1
+      date: 2012-12-20
+    - name: RT
+      vote: 1
+      date: 2012-12-21
+    - name: KK
+      vote: 1
+      date: 2012-12-21
