--- a/r3.yaml
+++ b/r3.yaml
@@ -4,9 +4,11 @@ action_date: 2008-04-29T00:00:00
 action: Approved
 resolution: |
     Tabling the membership benefits discussion until the bylaws discussion is completed.
+motion: irc
 vote_record: |
-    This was proposed in IRC chat of April 29th
-    
-    JD - Yes
-    SD - Yes
-    MB - Yes
+    - name: JD
+      vote: 1
+    - name: SD
+      vote: 1
+    - name: MB
+      vote: 1
