--- a/r39.yaml
+++ b/r39.yaml
@@ -29,9 +29,21 @@ resolution: |
        SDPUG.
     
     6. The authorized contact of SDPUG shall be Joe Conway
+motion: email
 vote_record: |
-    JD: +1 (and proposer, via email 2014-12-09)
-    JSK: +1 (via email 2014-12-09)
-    MW: +1 (via email 2014-12-09)
-    MAB: +1 (via email 2014-12-10)
-    RT: +1 (via email 2014-12-15)
+    - name: JD
+      proposer: yes
+      vote: 1
+      date: 2014-12-09
+    - name: JSK
+      vote: 1
+      date: 2014-12-09
+    - name: MW
+      vote: 1
+      date: 2014-12-09
+    - name: MAB
+      vote: 1
+      date: 2014-12-10
+    - name: RT
+      vote: 1
+      date: 2014-12-15
