--- a/r4.yaml
+++ b/r4.yaml
@@ -8,6 +8,9 @@ resolution: |
     75.00 for professional
     20.00 for student
 vote_record: |
-    Selena Deckelmann - Yes
-    Joshua D. Drake - Yes
-    Michael Brewer - Yes
+    - name: Selena Deckelmann
+      vote: 1
+    - name: Joshua D. Drake
+      vote: 1
+    - name: Michael Brewer
+      vote: 1
