--- a/r51.yaml
+++ b/r51.yaml
@@ -46,7 +46,17 @@ resolution: |
     
     8. Votes shall be tallied in descending order and the top three candidates
        win.
+motion: email
 vote_record: |
-    JD: (proposer via email 2016-10-12)
-    JM: +1 (via email 2016-10-12)
-    RT: -1 (via email 2016-10-12)
+    - name: JD
+      proposer: yes
+    - name: JM
+      vote: 1
+      date: 2016-10-12
+    - name: RT
+      vote: -1
+      date: 2016-10-12
+    - name: MW
+    - name: MAB
+    - name: KP
+    - name: JSK
