--- a/r58.yaml
+++ b/r58.yaml
@@ -17,10 +17,19 @@ resolution: |
     
     4. The authorized contacts of PostgresOpen shall be Joe Conway (mail@joeconway.com)
        and Stephen Frost (sfrost@snowman.net)
+motion: voice
 vote_record: |
-    JD: Yay
-    KP: Yay
-    RT: Yay (proxy)
-    JSK: Yay
-    MB: Yay (silently, on phone)
-    MW: Yay
+    - name: JD
+      vote: 1
+    - name: KP
+      vote: 1
+    - name: RT
+      proxy: KP
+      vote: 1
+    - name: JSK
+      vote: 1
+    - name: MB
+      vote: 1
+    - name: MW
+      vote: 1
+      proposer: MW
